--- a/OctopusSDK/OctAdSDKNoShake.xcframework/Info.plist
+++ b/OctopusSDK/OctAdSDKNoShake.xcframework/Info.plist
@@ -6,25 +6,11 @@
 	<array>
 		<dict>
 			<key>BinaryPath</key>
-			<string>OctAdSDK.framework/OctAdSDK</string>
-			<key>LibraryIdentifier</key>
-			<string>ios-arm64</string>
-			<key>LibraryPath</key>
-			<string>OctAdSDK.framework</string>
-			<key>SupportedArchitectures</key>
-			<array>
-				<string>arm64</string>
-			</array>
-			<key>SupportedPlatform</key>
-			<string>ios</string>
-		</dict>
-		<dict>
-			<key>BinaryPath</key>
-			<string>OctAdSDK.framework/OctAdSDK</string>
+			<string>OctAdSDKNoShake.framework/OctAdSDKNoShake</string>
 			<key>LibraryIdentifier</key>
 			<string>ios-arm64_x86_64-simulator</string>
 			<key>LibraryPath</key>
-			<string>OctAdSDK.framework</string>
+			<string>OctAdSDKNoShake.framework</string>
 			<key>SupportedArchitectures</key>
 			<array>
 				<string>arm64</string>
@@ -34,6 +20,20 @@
 			<string>ios</string>
 			<key>SupportedPlatformVariant</key>
 			<string>simulator</string>
+		</dict>
+		<dict>
+			<key>BinaryPath</key>
+			<string>OctAdSDKNoShake.framework/OctAdSDKNoShake</string>
+			<key>LibraryIdentifier</key>
+			<string>ios-arm64</string>
+			<key>LibraryPath</key>
+			<string>OctAdSDKNoShake.framework</string>
+			<key>SupportedArchitectures</key>
+			<array>
+				<string>arm64</string>
+			</array>
+			<key>SupportedPlatform</key>
+			<string>ios</string>
 		</dict>
 	</array>
 	<key>CFBundlePackageType</key>
