--- a/OctopusSDK/OctToponAdapterSDK.xcframework/Info.plist
+++ b/OctopusSDK/OctToponAdapterSDK.xcframework/Info.plist
@@ -6,11 +6,11 @@
 	<array>
 		<dict>
 			<key>BinaryPath</key>
-			<string>OctAdSDK.framework/OctAdSDK</string>
+			<string>OctToponAdapterSDK.framework/OctToponAdapterSDK</string>
 			<key>LibraryIdentifier</key>
 			<string>ios-arm64_x86_64-simulator</string>
 			<key>LibraryPath</key>
-			<string>OctAdSDK.framework</string>
+			<string>OctToponAdapterSDK.framework</string>
 			<key>SupportedArchitectures</key>
 			<array>
 				<string>arm64</string>
