--- a/OctopusSDK/OctCore.xcframework/Info.plist
+++ b/OctopusSDK/OctCore.xcframework/Info.plist
@@ -40,5 +40,7 @@
 	<string>XFWK</string>
 	<key>XCFrameworkFormatVersion</key>
 	<string>1.0</string>
+	<key>MinimumOSVersion</key>
+	<string>10</string>
 </dict>
 </plist>
